--- a/wappointment.pot
+++ b/wappointment.pot
@@ -2,14 +2,14 @@
 # This file is distributed under the same license as the Wappointment plugin.
 msgid ""
 msgstr ""
-"Project-Id-Version: Wappointment 2.4.3\n"
+"Project-Id-Version: Wappointment 2.4.4\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wappointment-plugin\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2022-01-18T18:59:11+00:00\n"
+"POT-Creation-Date: 2022-01-18T19:18:33+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.5.0\n"
 "X-Domain: wappointment\n"
@@ -527,7 +527,7 @@ msgid "You don't have any clients yet"
 msgstr ""
 
 #: app/Lists/translations_health.php:3
-msgid "Scheduled tasks might be late"
+msgid "Scheduled tasks health"
 msgstr ""
 
 #: app/Lists/translations_health.php:4
